tests/baselines/reference/moduleNodeDefaultImports(module=nodenext).errors.txt
b.mts(15,1): error TS2349: This expression is not callable.
  Type 'typeof import("mod")' has no call signatures.
b.mts(16,1): error TS2349: This expression is not callable.
  Type 'typeof import("mod")' has no call signatures.
b.mts(17,1): error TS2349: This expression is not callable.
  Type 'typeof import("mod")' has no call signatures.
b.mts(18,1): error TS2349: This expression is not callable.
  Type 'typeof import("mod")' has no call signatures.
b.mts(19,6): error TS2349: This expression is not callable.
  Type 'typeof import("mod")' has no call signatures.
b.mts(20,6): error TS2349: This expression is not callable.
  Type 'typeof import("mod")' has no call signatures.


==== mod.cts (0 errors) ====
    declare function fun(): void;
    export default fun;
==== b.mts (6 errors) ====
    import a from "./mod.cjs";
    import { default as b } from "./mod.cjs";
    import c, { default as d } from "./mod.cjs";
    import * as self from "./b.mjs";
    export { default } from "./mod.cjs";
    export { default as def } from "./mod.cjs";
    
    a === b;
    b === c;
    c === d;
    d === self.default;
    self.default === self.def;
    
    // should all fail
    a();
    ~
!!! error TS2349: This expression is not callable.
!!! error TS2349:   Type 'typeof import("mod")' has no call signatures.
    b();
    ~
!!! error TS2349: This expression is not callable.
!!! error TS2349:   Type 'typeof import("mod")' has no call signatures.
    c();
    ~
!!! error TS2349: This expression is not callable.
!!! error TS2349:   Type 'typeof import("mod")' has no call signatures.
    d();
    ~
!!! error TS2349: This expression is not callable.
!!! error TS2349:   Type 'typeof import("mod")' has no call signatures.
    self.default();
         ~~~~~~~
!!! error TS2349: This expression is not callable.
!!! error TS2349:   Type 'typeof import("mod")' has no call signatures.
    self.def();
         ~~~
!!! error TS2349: This expression is not callable.
!!! error TS2349:   Type 'typeof import("mod")' has no call signatures.
    
    // should all work
    a.default();
    b.default();
    c.default();
    d.default();
    self.default.default();
    self.def.default();